# bunode

./: .gitignore  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/actions/setup-bunode/: action.yml
.github/workflows/: ci.yml  prepare-release.yml  release.yml
crates/bunode/: Cargo.toml  build.rs
crates/bunode/src/: bun.rs  bun_runner.rs  cli.rs  error.rs  executor.rs  help.rs  main.rs  preload.js  preload.rs  version.rs
crates/bunode/src/base/: argv.rs  builtins.rs  common_js_preload.rs  data_url.rs  env_file.rs  help.rs  mod.rs  options.rs  parser.rs
crates/bunode/src/base/parser/: actions.rs  mod.rs  node_options.rs  state.rs  tokens.rs
crates/bunode/src/cli/: args.rs  config.rs  download.rs  prefix.rs
crates/bunode/src/preload/: minify.rs  mod.rs  preload.cjs  preload.js
crates/bunode/tests/: cli.rs
rfcs/: bun-core-generator.md  bunode-cli.md  rust-wrapper-core.md
scripts/: prepare-release.test.ts  prepare-release.ts  release.test.ts  release.ts  setup-ci-runtime.mjs  setup-dev.ts
tests/: basic.test.ts  snap-test.test.ts  snap-tests.schema.json
tests/snap-tests/: README.md
tests/snap-tests/1.3.14/basic-execution/: script.cjs  snap.json  snap.txt
tests/snap-tests/1.3.14/cli-error-code/: driver.js  exit42.cjs  snap-colored.txt  snap.json  snap.txt  stdin-preload-exit-driver.js
tests/snap-tests/1.3.14/dash-script/: snap.json  snap.txt  steps.json
tests/snap-tests/1.3.14/data-import-url/: snap.json  snap.txt
tests/snap-tests/1.3.14/env-file-validation/: snap-colored.txt  snap.json  steps.json
tests/snap-tests/1.3.14/eval-print/: steps.json
tests/snap-tests/1.3.14/eval-runtime-metadata/: eval-metadata-driver.js  snap.json  snap.txt
tests/snap-tests/1.3.14/exec-argv-fork/: parent.cjs  preload.cjs  snap-colored.txt  snap.json  steps.json
tests/snap-tests/1.3.14/help-document/: snap-colored.txt  snap.json  snap.txt  steps.json
tests/snap-tests/1.3.14/node-options-env-file-parsing/: escaped-preload.cjs  escaped.env  mixed.env  multi-preload.cjs  multi.env  snap-colored.txt  snap.json
tests/snap-tests/1.3.14/node-options-preload/: driver.js  node-options.env  preload.js  snap-colored.txt  snap.json
tests/snap-tests/1.3.14/node-options-validation/: bad-node-options.env  driver.js  snap-colored.txt  snap.json  snap.txt
tests/snap-tests/1.3.14/preload-order/: cjs.cjs  driver.js  esm.mjs  snap-colored.txt  snap.json  snap.txt  steps.json
tests/snap-tests/1.3.14/print-mode/: large-stdin-driver.js  script.js  snap-colored.txt  snap.json  snap.txt  stdin-driver.js  steps.json
tests/snap-tests/1.3.14/print-process-version/: snap.json
tests/snap-tests/1.3.14/print-runtime-boundaries/: print-boundary-driver.js  snap-colored.txt  snap.json
tests/snap-tests/1.3.14/require-preload-resolution/: same-preload-a.cjs  snap.json  snap.txt
tests/snap-tests/1.3.14/review-edge-cases/: driver.js  snap-colored.txt  snap.txt  steps.json
tests/snap-tests/1.3.14/script-metadata/: script.js  snap-colored.txt  snap.json  snap.txt  steps.json
tests/snap-tests/1.3.14/stdin-hashbang-metadata/: hashbang.txt  snap-colored.txt  snap.json
tests/snap-tests/1.3.14/stdin-script/: driver.js  snap-colored.txt  snap.json  snap.txt  stdin-module.txt  stdin-script.txt  steps.json
tests/snap-tests/1.3.14/version-command/: snap-colored.txt  snap.json  steps.json
tests/snap-tests/1.3.14/version-ignores-bunfig/: preload.js  snap.json  steps.json
