[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0-alpha.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
categories = []
keywords = ["bun", "nodejs", "runtime"]
license = "MIT"
repository = "https://github.com/liangmiQwQ/bunode"
description = "A Node.js compatible layer for Bun."

edition = "2024"
rust-version = "1.96.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

