[package]
name = "bunode"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
publish = false

[build-dependencies]
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_minifier = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

[dependencies]
clap = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
