[package]
name = "bunode"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
publish = false

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "bunode"
path = "src/cli.rs"

[build-dependencies]
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_minifier = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

[dependencies]
deno_dotenv = { workspace = true }
flate2 = { workspace = true }
lexopt = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
